--- a/EXP9/EXP9.html
+++ b/EXP9/EXP9.html
@@ -80,10 +80,10 @@
         <div class="container col-sm-8 mt-5" align="center">
             <center>
                 <div class="text-center col-sm-6 mt-5" >
-                    <a class="text-grey" href="#!maddy">MADDY</a>
-                    <a class="text-grey" href="#!sam">SAM</a>
-                    <a class="text-grey" href="#!desigan">DESIGAN</a>
-                    <a class="text-grey" href="#!muthu">MUTHU</a>
+                    <a class="text-grey" href="#!maddy">JASCAR</a>
+                    <a class="text-grey" href="#!sam">ROHAN</a>
+                    <a class="text-grey" href="#!desigan">VINO</a>
+                    <a class="text-grey" href="#!muthu">SAM</a>
                 </div>
             </center>
             <div ng-view class="mt-5">
